# daily-report-app

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
.automation-runs/codex-hourly-20260607t021813z/: payload.json
.github/workflows/: ci.yml  pages.yml  scheduled-reconcile.yml
agents/: schema-data.md
collector/: __init__.py  archive.py  article_html.py  article_markdown.py  cli.py  finalize_public_run.py  jsonio.py  manifest.py  paths.py  publish.py  publish_public_run.py  sample.py  sample_source.py  schema_validation.py  secrets.py  validation.py
config/automation/: codex-hourly.zh.json
config/sources/: deterministic-sample.json
docs/: architecture.md  runbook.md
docs/adr/: 0001-data-branch.md
mac/: Package.swift
mac/Sources/DailyReportCore/: ImportService.swift  Models.swift  (+2 more)
public/index/: days.json  known-links.json  latest.json  sources.json
schemas/public/: automation-audit.schema.json  daily-report.schema.json  days.schema.json  hourly-report.schema.json  item.schema.json  known-links.schema.json  latest.schema.json  manifest.schema.json  sources.schema.json
scripts/automation/: automation-preflight.sh  dispatch-data-updated.sh  generate_curated_public_data.py  make-item-id.sh  publish-public-run.sh
tests/: test_automation_contract.py  test_duplicates.py  test_finalize_public_run.py  test_manifest.py  test_publish_public_run.py  test_schema_validation.py
web/: .gitignore  astro.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/e2e/: showcase.spec.ts  workstation.spec.ts
(+346 files in other folders)
